# rest-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: unit_test.yml
docker/: Dockerfile-MSSQLServer
proxy/: Configfile  Dockerfile
rest_fastapi/: app.py  main.py
rest_fastapi/controllers/: login.py  protected.py
rest_fastapi/core/: config.py
rest_fastapi/routes/: api.py
rest_fastapi/security/: auth.py  schemas.py
secrets/: .env.example
tests/: conftest.py  test_login.py  test_protected.py  test_security.py
