[project]
name = "rest-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreAmorim05",email = "js.andreamorim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
    "db-dtypes (>=1.4.2,<2.0.0)",
    "google-cloud-bigquery-storage (>=2.31.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi-utils[all] (>=0.8.0,<0.9.0)",
    "python-jose[cryptography] (>=3.3.0)",
    "passlib (>=1.7.4)",
    "bcrypt (>=4.2.0)",
    "python-multipart (>=0.0.17)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"

